<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_user_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_tv1_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_50sdp" />

        <EditText
            android:id="@+id/fragment_reset_pass_et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:inputType="number"
            android:hint="@string/reset_password_et_code"
            style="@style/general_et_user_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_tv2_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_20sdp" />

        <EditText
            android:id="@+id/fragment_reset_pass_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textPassword"
            android:hint="@string/login_et_password"
            style="@style/general_et_user_white" />

        <EditText
            android:id="@+id/fragment_reset_pass_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:inputType="textPassword"
            android:hint="@string/reset_password_et_confirm_password"
            style="@style/general_et_user_white" />

        <Button
            android:id="@+id/fragment_reset_pass_btn_send"
            android:text="@string/forgot_password_btn_send"
            android:layout_marginTop="@dimen/_50sdp"
            style="@style/activity_splash_btn" />

    </LinearLayout>
</layout>