<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_user_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_tv_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_20sdp" />

        <EditText
            android:id="@+id/fragment_forgot_pass_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:hint="@string/login_et_email"
            style="@style/general_et_user_white"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp" />

        <Button
            android:id="@+id/fragment_forgot_pass_btn_send"
            android:text="@string/forgot_password_btn_send"
            android:layout_marginTop="@dimen/_30sdp"
            style="@style/activity_splash_btn" />


    </LinearLayout>
</layout>