<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/line_seperator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/fragment_restaurant_container_tl_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/disable_caps"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/line_seperator"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:tabSelectedTextColor="@color/pink"
            app:tabMode="fixed"
            app:tabTextColor="@color/pink"
            app:tabIndicatorColor="@color/pink"
            app:tabIndicatorHeight="@dimen/_3sdp"
            app:tabIndicatorFullWidth="true"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_container_tl_food_menu" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_container_tl_comments_rating" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_container_tl_store_info" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/fragment_restaurant_container_tl_tabs"
            android:id="@+id/fragment_restaurant_container_vp_pager" />

    </RelativeLayout>
</layout>